<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:text="@string/hi_welcome"
    style="@style/MyHeadlineTextAppearance"
    android:textSize="52sp"
    android:textStyle="bold"
    android:fontFamily="@font/open_sans_regular">
</TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:textAlignment="textStart"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label_text"
        android:textSize="16sp"
        android:layout_gravity="start"
        android:textColor="@color/gray"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/google_icon_login"
            android:background="@drawable/rounded_corner_background"
            android:layout_width="20dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:src="@drawable/google"
            android:padding="16dp"
            />

        <ImageButton
            android:id="@+id/instagram_icon_login"
            android:layout_width="20dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"

            android:background="@drawable/rounded_corner_background"
            android:padding="16dp"
            android:src="@drawable/instagram" />

        <ImageButton
            android:id="@+id/apple_icon_login"
            android:layout_width="20dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:src="@drawable/apple"
            android:layout_marginStart="8dp"

            android:background="@drawable/rounded_corner_background"
            android:padding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email_address_or_username" />



            </LinearLayout>


            <EditText
                android:id="@+id/login_email_input"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/email_roundedcorner_background"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/password" />

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/email_roundedcorner_background"
            android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/login_continue_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/to_continue"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/purple_500"
            android:background="@drawable/rounded_colored_background"/>
        />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:layout_margin="8dp"

                />

        </LinearLayout>

    </LinearLayout>




</LinearLayout>
